--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,21 @@
 <html class="no-js" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>index</title>
 </head>
 <body>
-    <h2>게시판~</h2>
-    <a href="/board/save-form">글작성</a>
-    <a href="/board/">글목록</a>
+    <button onclick="req(1)">글작성</button>
+    <button onclick="req(2)">글목록</button>
 </body>
+
+<script>
+    const req = (num) => {
+        if (num == 1) {
+            location.href = "/board/save";
+        }
+        if(num == 2){
+            location.href = "/board/";
+        }
+    }
+</script>
 </html>
