--- a/src/main/resources/templates/pages/list.html
+++ b/src/main/resources/templates/pages/list.html
@@ -1,26 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Meta Tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Laralink">
+    <!-- Favicon Icon -->
+    <!--  <link rel="icon" href="assets/img/favicon.png">-->
+    <!-- Site Title -->
+    <title>Arino - Creative Agency Template</title>
+    <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/plugins/lightgallery.min.css">
+    <link rel="stylesheet" href="assets/css/plugins/slick.css">
+    <link rel="stylesheet" href="assets/css/plugins/lightgallery.min.css">
+    <link rel="stylesheet" href="assets/css/plugins/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-  <h2>글조회 form~</h2>
-    <table>
-      <tr>
-        <th>No.</th>
-        <th>제목</th>
-        <th>작성자</th>
-        <th>작성일자</th>
-        <th>조회수</th>
-      </tr>
-      <tr th:each = "board : ${boardList}">
-        <td th:text = "${board.id}"></td>
-        <td><a th:href="@{|/board/${board.id}|}" th:text = "${board.title}"></a></td>
-        <td th:text = "${board.writer}"></td>
-        <td th:text = "*{#temporals.format(board.createdDate,'yyyy-MM-dd HH:mm:ss')}"></td>
-        <td th:text = "${board.hits}"></td>
-      </tr>
-    </table>
+<div class="cs-preloader cs-center">
+    <div class="cs-preloader_in"></div>
+</div>
+<!--header-->
+<div id="header"></div>
+<!-- Start Hero -->
+<div class="cs-page_heading cs-style1 cs-center text-center cs-bg" data-src="assets/img/contact_hero_bg.jpeg">
+    <div class="container">
+        <div class="cs-page_heading_in">
+            <h1 class="cs-page_title cs-font_50 cs-white_color">게시판목록입니더~</h1>
+            <ol class="breadcrumb text-uppercase">
+                <li class="breadcrumb-item"><a href="/board/save">글 작성하기</a></li>
+            </ol>
+        </div>
+    </div>
+</div>
+<!-- End Hero -->
+<div class="cs-height_50 cs-height_lg_40"></div>
+<div class="container">
+    <div class="row">
+        <table class="table" style="color: white">
+            <thead>
+            <tr class="table-active" style="text-align: center">
+                <th>No.</th>
+                <th>제목</th>
+                <th>작성자</th>
+                <th>작성일자</th>
+                <th>조회수</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="board : ${boardList}" style="text-align: center">
+                <td th:text="${board.id}"></td>
+                <td><a th:href="@{|/board/${board.id}|}" th:text="${board.title}"></a></td>
+                <td th:text="${board.writer}"></td>
+                <td th:text="*{#temporals.format(board.createdDate,'yyyy-MM-dd HH:mm:ss')}"></td>
+                <td th:text="${board.hits}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="cs-height_50 cs-height_lg_40"></div>
+<!--footer-->
+<div id="footer"></div>
+<!-- Script -->
+<script src="assets/js/plugins/jquery-3.6.0.min.js"></script>
+<script src="assets/js/plugins/isotope.pkg.min.js"></script>
+<script src="assets/js/plugins/jquery.slick.min.js"></script>
+<script src="assets/js/plugins/jquery.counter.min.js"></script>
+<script src="assets/js/plugins/lightgallery.min.js"></script>
+<script src="assets/js/plugins/wow.min.js"></script>
+<script src="assets/js/plugins/gsap.min.js"></script>
+<script src="assets/js/main.js"></script>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#header").load("/html/header.html");
+        $("#footer").load("/html/footer.html");
+    });
+</script>
+
+<script>
+    const req = (num) => {
+        if (num == 1) {
+            location.href = "/board/save";
+        }
+        if (num == 2) {
+            location.href = "/board/";
+        }
+    }
+</script>
 </body>
 </html>
+
+
