--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -28,9 +28,11 @@
 <!-- Start Hero -->
 <div class="cs-page_heading cs-style1 cs-center text-center cs-bg" data-src="assets/img/contact_hero_bg.jpeg">
     <div class="container">
+        <div class="cs-height_50 cs-height_lg_40"></div>
         <div class="cs-page_heading_in">
-            <h1 class="cs-page_title cs-font_50 cs-white_color">환영헙니다~</h1>
+            <h1 class="cs-page_title cs-font_50 cs-white_color">메인페이지</h1>
         </div>
+        <div class="cs-height_50 cs-height_lg_40"></div>
     </div>
 </div>
 <!-- End Hero -->
@@ -39,10 +41,11 @@
     <div class="row">
         <div class="col-lg-12">
 
-            <div class="col-lg-12">
+            <div class="btn_area text-center col-lg-12">
                 <button class="cs-btn cs-style1" type="submit" onclick="req(1)">
                     게시판으로 이동하기
                 </button>
+                <div class="cs-height_50 cs-height_lg_40"></div>
                 <button class="cs-btn cs-style1" type="submit" onclick="req(2)">
                     로그인
                 </button>
