fix: 삭제 & 조회 메서드 수정, 조회 화면 index 번호 수정

--- a/src/main/resources/templates/pages/detail.html
+++ b/src/main/resources/templates/pages/detail.html
@@ -138,7 +138,7 @@
             if (num == 1) { // 수정 요청
                 location.href = "/board/update/" + id;
             } else if (num == 2) { // 삭제 요청
-                location.href = "/board/delete";
+                location.href = "/board/delete/" + id;
             }
         } else {
             alert("비밀번호가 일치하지 않습니다.");
