--- a/src/main/resources/templates/pages/list.html
+++ b/src/main/resources/templates/pages/list.html
@@ -58,8 +58,8 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="board : ${boardList}" class="text-center">
-                <td th:text="${board.id}"></td>
+            <tr th:each="board, status : ${boardList}" class="text-center">
+                <td th:text="${status.index + 1}"></td>
                 <td><a th:href="@{|/board/${board.id}|}" th:text="${board.title}"></a></td>
                 <td th:text="${board.writer}"></td>
                 <td th:text="*{#temporals.format(board.createdDate,'yyyy-MM-dd')}"></td>
